<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.vinoteca.views.ListActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_orderBy"
        android:orderInCategory="100"
        android:title="@string/orderbutton"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/helpbutton"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/aboutActivity"
        app:showAsAction="never" />
</menu>